# libxcursor

./: .gitlab-ci.yml  Makefile.am  configure.ac  meson.build  meson.options  xcursor.pc.in
include/X11/Xcursor/: Xcursor.h.in
man/: Xcursor.man
src/: cursor.c  display.c  file.c  library.c  xcursorint.h  xlib.c
